--- a/Experience.html
+++ b/Experience.html
@@ -140,7 +140,7 @@
       <img src="assets/mockups/experience_mockup.png" alt="Flujo de trabajo o documento">
     </div>
     <div class="buttons">
-      <a href="habilidades.html">Ver habilidades</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/Skills.html">Ver habilidades</a>
     </div>
   </section>
 
