--- a/Skills.html
+++ b/Skills.html
@@ -111,7 +111,7 @@
 
       <!-- Hard Skills -->
       <div class="skill">
-        <img src="assets/icons/globe.svg" alt="Inglés">
+        <img src="file:///C:/Users/ajepa/Downloads/globe.svg" alt="Inglés">
         <div class="info">
           <h4>Inglés C1</h4>
           <p>Dominio bilingüe para comunicación efectiva en ambientes globales.</p>
