--- a/Skills.html
+++ b/Skills.html
@@ -111,7 +111,7 @@
 
       <!-- Hard Skills -->
       <div class="skill">
-        <img src="https://irvyandl.github.io/VirtualAssitance/g6KAHyjAF.png" alt="Inglés">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/globe.svg" alt="Inglés">
         <div class="info">
           <h4>Inglés C1</h4>
           <p>Dominio bilingüe para comunicación efectiva en ambientes globales.</p>
@@ -119,7 +119,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/ppt.svg" alt="PowerPoint">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/monitor.svg" alt="PowerPoint">
         <div class="info">
           <h4>PowerPoint</h4>
           <p>Diseño de presentaciones profesionales con enfoque corporativo.</p>
@@ -127,7 +127,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/word.svg" alt="Word">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/file-text.svg" alt="Word">
         <div class="info">
           <h4>Microsoft Word</h4>
           <p>Manejo avanzado de herramientas de redacción y formato.</p>
@@ -135,7 +135,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/write.svg" alt="Copywriting">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/edit.svg" alt="Copywriting">
         <div class="info">
           <h4>Redacción</h4>
           <p>Claridad, estructura y tono profesional para documentos y correos.</p>
@@ -143,7 +143,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/canva.svg" alt="Canva">
+        <img src="faltaa" alt="Canva">
         <div class="info">
           <h4>Canva</h4>
           <p>Diseño visual para materiales rápidos y funcionales.</p>
@@ -151,7 +151,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/bi.svg" alt="Power BI">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/bar-chart.svg" alt="Power BI">
         <div class="info">
           <h4>Power BI</h4>
           <p>Creación de dashboards interactivos y storytelling visual.</p>
@@ -159,7 +159,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/excel.svg" alt="Excel">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/table.svg" alt="Excel">
         <div class="info">
           <h4>Excel Avanzado</h4>
           <p>Modelado, fórmulas y visualización de datos efectiva.</p>
@@ -168,7 +168,7 @@
 
       <!-- Soft Skills -->
       <div class="skill">
-        <img src="assets/icons/brain.svg" alt="Pensamiento crítico">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/11d4b7fa253a3f4d34725947a7dd83ef5f555fc5/assets/visuals/search.svg" alt="Pensamiento crítico">
         <div class="info">
           <h4>Pensamiento crítico</h4>
           <p>Evaluación y mejora constante de decisiones y procesos.</p>
@@ -176,7 +176,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/up-arrow.svg" alt="Mejora continua">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/book-open.svg" alt="Mejora continua">
         <div class="info">
           <h4>Mejora continua</h4>
           <p>Busco formas nuevas de optimizar tiempo y energía.</p>
@@ -184,7 +184,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/refresh.svg" alt="Apertura mental">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/shuffle.svg" alt="Apertura mental">
         <div class="info">
           <h4>Apertura mental</h4>
           <p>Flexibilidad para adaptarme a nuevas ideas o enfoques.</p>
@@ -192,7 +192,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/chat.svg" alt="Comunicación clara">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/message-circle.svg" alt="Comunicación clara">
         <div class="info">
           <h4>Comunicación clara</h4>
           <p>Mensajes estructurados y entendibles en cada entrega.</p>
@@ -200,7 +200,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/clock.svg" alt="Gestión del tiempo">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/clock.svg" alt="Gestión del tiempo">
         <div class="info">
           <h4>Gestión del tiempo</h4>
           <p>Rutinas y entregas organizadas, enfocadas en eficiencia.</p>
@@ -208,7 +208,7 @@
       </div>
 
       <div class="skill">
-        <img src="assets/icons/gear.svg" alt="Resolución de problemas">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/2366e387452800f4d593229ee72998133d787635/assets/visuals/settings.svg" alt="Resolución de problemas">
         <div class="info">
           <h4>Resolución de problemas</h4>
           <p>Soluciones rápidas y lógicas ante imprevistos.</p>
