--- a/Skills.html
+++ b/Skills.html
@@ -143,7 +143,7 @@
       </div>
 
       <div class="skill">
-        <img src="faltaa" alt="Canva">
+        <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/930b360e0ab79e08be0b537dc0b09e89e2e54c5a/assets/visuals/layers.svg" alt="Canva">
         <div class="info">
           <h4>Canva</h4>
           <p>Diseño visual para materiales rápidos y funcionales.</p>
