--- a/Projects.html
+++ b/Projects.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Proyectos | Irvin Prado</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
@@ -44,7 +44,7 @@
     }
 
     .project img {
-      max-width: 400px;
+      max-width: 100%;
       border-radius: 8px;
     }
 
@@ -63,7 +63,7 @@
       margin-bottom: 1rem;
     }
 
-    .project a {
+    .project a.cta {
       display: inline-block;
       margin-top: 1rem;
       background-color: var(--color-accent);
@@ -74,8 +74,42 @@
       transition: background 0.3s;
     }
 
-    .project a:hover {
+    .project a.cta:hover {
       background-color: #1d3b6c;
+    }
+
+    .ppt-controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .ppt-controls img {
+      width: 400px;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    .ppt-buttons {
+      display: flex;
+      gap: 1rem;
+    }
+
+    .ppt-buttons button {
+      background-color: var(--color-accent);
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .ppt-buttons button:disabled {
+      background-color: #999;
+      cursor: not-allowed;
     }
 
     footer {
@@ -90,14 +124,21 @@
 <body>
   <section class="section">
 
+    <!-- Proyecto PowerPoint con carrusel -->
     <div class="project">
       <div class="text">
         <h3>Plan de apertura: de guion a presentación ejecutiva</h3>
         <p>Adaptación de guion a formato visual en PowerPoint con IA y branding. Proyecto diseñado para The Boulevard Food.</p>
         <p><strong>Habilidades:</strong> PowerPoint, diseño, escritura estructurada</p>
-        <a href="#">Contactame para tener estas presentaciones en tu negocio</a>
+        <a href="#" class="cta">Contáctame para tener estas presentaciones en tu negocio</a>
       </div>
-      <img src="assets/mockups/ppt_mockup_1.png" alt="Presentación PowerPoint">
+      <div class="ppt-controls">
+        <img id="ppt-image" src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Diapositiva 1">
+        <div class="ppt-buttons">
+          <button id="prev" disabled>&larr; Anterior</button>
+          <button id="next">Siguiente &rarr;</button>
+        </div>
+      </div>
     </div>
 
     <div class="project">
@@ -105,9 +146,9 @@
         <h3>Ventas anuales: dashboard interactivo para decisiones rápidas</h3>
         <p>Transformación de +7000 datos en gráficos dinámicos con Power BI. Reportes automatizados y fácilmente interpretables.</p>
         <p><strong>Habilidades:</strong> Power BI, DAX, limpieza de datos</p>
-        <a href="enlace de archivo PBIX aquí">Descarga e interactúa con este dashboard</a>
+        <a href="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" class="cta">Descarga e interactúa con este dashboard</a>
       </div>
-      <img src="assets/mockups/dashboard_mockup.png" alt="Dashboard Power BI">
+      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Dashboard Power BI">
     </div>
 
     <div class="project">
@@ -115,9 +156,9 @@
         <h3>Análisis de precios: decisiones antes del pico</h3>
         <p>Seguimiento y visualización de precios de insumos por 5 meses en Excel, para decisiones de compra inteligentes.</p>
         <p><strong>Habilidades:</strong> Excel avanzado, visualización, análisis de tendencias</p>
-        <a href="enlace de archivo Excel aquí">Ver reporte de análisis de precios</a>
+        <a href="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717.png?raw=true" class="cta">Ver reporte de análisis de precios</a>
       </div>
-      <img src="assets/mockups/excel_mockup.png" alt="Reporte de precios en Excel">
+      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717.png?raw=true" alt="Reporte de precios en Excel">
     </div>
 
     <div class="project">
@@ -125,7 +166,7 @@
         <h3>Correo ejecutivo: claridad en movimiento</h3>
         <p>Email redactado desde llamada + info interna. Explica aumentos de precio y mantiene un tono profesional bilingüe.</p>
         <p><strong>Habilidades:</strong> Redacción, comunicación efectiva, inglés profesional</p>
-        <a href="#">Emails así de claros en tu negocio? Contáctame</a>
+        <a href="#" class="cta">¿Emails así de claros en tu negocio? Contáctame</a>
       </div>
       <img src="assets/mockups/email_mockup.png" alt="Correo profesional">
     </div>
@@ -135,5 +176,43 @@
   <footer>
     © 2025 Irvin Prado. Built with purpose and precision.
   </footer>
+
+  <script>
+    const pptImages = [
+      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(1).png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(2).png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(3).png?raw=true',
+      'https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740%20(4).png?raw=true'
+    ];
+    let currentSlide = 0;
+
+    const img = document.getElementById('ppt-image');
+    const prevBtn = document.getElementById('prev');
+    const nextBtn = document.getElementById('next');
+
+    function updateButtons() {
+      prevBtn.disabled = currentSlide === 0;
+      nextBtn.disabled = currentSlide === pptImages.length - 1;
+    }
+
+    prevBtn.addEventListener('click', () => {
+      if (currentSlide > 0) {
+        currentSlide--;
+        img.src = pptImages[currentSlide];
+        updateButtons();
+      }
+    });
+
+    nextBtn.addEventListener('click', () => {
+      if (currentSlide < pptImages.length - 1) {
+        currentSlide++;
+        img.src = pptImages[currentSlide];
+        updateButtons();
+      }
+    });
+
+    updateButtons();
+  </script>
 </body>
 </html>
