--- a/Projects.html
+++ b/Projects.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -81,8 +80,9 @@
     }
 
     .ppt-controls img {
-      width: 400px;
-      margin-bottom: 1rem;
+      width: 100%;
+      max-width: 800px;
+      margin: 1.5rem auto;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
