--- a/Experience.html
+++ b/Experience.html
@@ -131,7 +131,7 @@
           <li>Redacción de correos y promociones</li>
         </ul>
         <div class="icon-row">
-          <img src="assets/icons/calendar.svg" alt="Calendario">
+          <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Calendario">
           <img src="assets/icons/excel.svg" alt="Excel">
           <img src="assets/icons/checklist.svg" alt="Checklist">
         </div>
