--- a/Experience.html
+++ b/Experience.html
@@ -137,7 +137,7 @@
         </div>
         <a href="#">Contactame para sumar esta experiencia a tu equipo</a>
       </div>
-      <img src="assets/mockups/experience_mockup.png" alt="Flujo de trabajo o documento">
+      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Flujo de trabajo o documento">
     </div>
     <div class="buttons">
       <a href="https://irvyandl.github.io/VirtualAssitance/Skills.html">Ver habilidades</a>
