--- a/Experience.html
+++ b/Experience.html
@@ -131,9 +131,9 @@
           <li>Redacción de correos y promociones</li>
         </ul>
         <div class="icon-row">
-          <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Calendario">
-          <img src="assets/icons/excel.svg" alt="Excel">
-          <img src="assets/icons/checklist.svg" alt="Checklist">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/mail.svg" alt="Calendario">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/calendar.svg" alt="Excel">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/check-square%20(1).svg" alt="Checklist">
         </div>
         <a href="#">Contactame para sumar esta experiencia a tu equipo</a>
       </div>
