--- a/Experience.html
+++ b/Experience.html
@@ -151,7 +151,7 @@
       </div>
       <div class="mockup-row">
         <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Mockup existente">
-        <img src="enlace_a_mockup_checklist.png" alt="Checklist visual">
+        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/joF4belZM.png?raw=true" alt="Checklist visual">
         <img src="enlace_a_mockup_correo.png" alt="Correo visual">
       </div>
     </div>
