--- a/Experience.html
+++ b/Experience.html
@@ -143,7 +143,7 @@
           <li>Redacción de correos y promociones</li>
         </ul>
         <div class="icon-row">
-          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/mail.svg" alt="Calendario">
+          <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Calendario">
           <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/calendar.svg" alt="Excel">
           <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/check-square%20(1).svg" alt="Checklist">
         </div>
