--- a/Experience.html
+++ b/Experience.html
@@ -152,7 +152,7 @@
       <div class="mockup-row">
         <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Mockup existente">
         <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/joF4belZM.png?raw=true" alt="Checklist visual">
-        <img src="enlace_a_mockup_correo.png" alt="Correo visual">
+        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Correo visual">
       </div>
     </div>
     <div class="buttons">
