--- a/Projects.html
+++ b/Projects.html
@@ -167,7 +167,7 @@
         <p><strong>Habilidades:</strong> Redacción, comunicación efectiva, inglés profesional</p>
         <a href="#" class="cta">¿Emails así de claros en tu negocio? Contáctame</a>
       </div>
-      <img src="assets/mockups/email_mockup.png" alt="Correo profesional">
+      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Correo profesional">
     </div>
 
   </section>
