--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
 <body>
   <div class="container">
     <h2>¿Trabajamos juntos?</h2>
-    <form action="https://formspree.io/f/mayrvqzj" method="POST">
-      <input type="hidden" name="_next" value="confirmacion.html">
+    <form action="https://formspree.io/f/mblywzdy" method="POST">
+      <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssitance/confirm.html">
       <input type="text" name="name" placeholder="Tu nombre" required>
       <input type="email" name="email" placeholder="Tu correo electrónico" required>
       <select name="service" required>
