--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
 <body>
   <div class="container">
     <h2>¿Trabajamos juntos?</h2>
-    <form action="https://formspree.io/f/mblywzdy" method="POST">
+    <form action="https://formsubmit.co/el/keholi" method="POST">
       <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssitance/confirm.html">
       <input type="text" name="name" placeholder="Tu nombre" required>
       <input type="email" name="email" placeholder="Tu correo electrónico" required>
