--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contacto | Irvin Prado</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet"/>
   <style>
     :root {
       --color-bg: #E8F0F5;
@@ -12,13 +12,11 @@
       --color-gray: #F6F8FB;
       --color-text-dark: #1A1A1A;
     }
-
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
-
     body {
       font-family: 'Inter', sans-serif;
       background: linear-gradient(to bottom right, #F6F8FB, #E8F0F5);
@@ -26,7 +24,6 @@
       line-height: 1.6;
       padding: 4rem 2rem;
     }
-
     .container {
       max-width: 700px;
       margin: auto;
@@ -35,7 +32,6 @@
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     }
-
     h2 {
       font-family: 'Poppins', sans-serif;
       font-size: 2rem;
@@ -43,24 +39,20 @@
       color: var(--color-accent);
       text-align: center;
     }
-
     form {
       display: flex;
       flex-direction: column;
       gap: 1rem;
     }
-
     input, select, textarea {
       padding: 0.75rem 1rem;
       border: 1px solid #ccc;
       border-radius: 6px;
       font-size: 1rem;
     }
-
     textarea {
       min-height: 120px;
     }
-
     button {
       background-color: var(--color-accent);
       color: white;
@@ -71,26 +63,21 @@
       cursor: pointer;
       transition: background 0.3s;
     }
-
     button:hover {
       background-color: #1d3b6c;
     }
-
     .alt-contact {
       text-align: center;
       margin-top: 2rem;
       font-size: 0.95rem;
     }
-
     .alt-contact a {
       color: var(--color-accent);
       text-decoration: none;
     }
-
     .alt-contact a:hover {
       text-decoration: underline;
     }
-
     footer {
       text-align: center;
       margin-top: 4rem;
@@ -102,10 +89,10 @@
 <body>
   <div class="container">
     <h2>¿Trabajamos juntos?</h2>
-    <form action="https://formsubmit.co/el/keholi" method="POST">
-      <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssitance/confirm.html">
-      <input type="text" name="name" placeholder="Tu nombre" required>
-      <input type="email" name="email" placeholder="Tu correo electrónico" required>
+    <form action="https://formsubmit.co/irvyandl18@gmail.com" method="POST">
+      <input type="hidden" name="_next" value="https://irvyandl.github.io/VirtualAssitance/confirm.html" />
+      <input type="text" name="name" placeholder="Tu nombre" required />
+      <input type="email" name="email" placeholder="Tu correo electrónico" required />
       <select name="service" required>
         <option value="">¿Qué necesitas?</option>
         <option value="asistencia">Asistencia Virtual</option>
@@ -116,13 +103,11 @@
       <textarea name="message" placeholder="Cuéntame más sobre lo que necesitas" required></textarea>
       <button type="submit">Enviar mensaje</button>
     </form>
-
     <div class="alt-contact">
       <p>¿Prefieres escribirme directamente? Puedes hacerlo a <a href="mailto:irvyandl18@gmail.com">irvyandl18@gmail.com</a></p>
       <p>O contactarme vía <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">LinkedIn</a></p>
     </div>
   </div>
-
   <footer>
     © 2025 Irvin Prado. Built with purpose and precision.
   </footer>
