--- a/Projects.html
+++ b/Projects.html
@@ -126,7 +126,7 @@
         <h3>Plan de apertura: de guion a presentación ejecutiva</h3>
         <p>Adaptación de guion a formato visual en PowerPoint con IA y branding. Proyecto diseñado para The Boulevard Food.</p>
         <p><strong>Habilidades:</strong> PowerPoint, diseño, escritura estructurada</p>
-        <a href="#" class="cta">Contáctame para tener estas presentaciones en tu negocio</a>
+        <a href="https://irvyandl.github.io/VirtualAssitance/contact.html" class="cta">Contáctame para tener estas presentaciones en tu negocio</a>
         <div class="ppt-controls">
           <img id="ppt-image" src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Diapositiva 1">
           <div class="ppt-buttons">
@@ -143,7 +143,7 @@
         <h3>Ventas anuales: dashboard interactivo para decisiones rápidas</h3>
         <p>Transformación de +7000 datos en gráficos dinámicos con Power BI. Reportes automatizados y fácilmente interpretables.</p>
         <p><strong>Habilidades:</strong> Power BI, DAX, limpieza de datos</p>
-        <a href="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" class="cta">Descarga e interactúa con este dashboard</a>
+        <a href="https://github.com/Irvyandl/VirtualAssitance/raw/refs/heads/main/assets/visuals/SalesReport.pbix" class="cta">Descarga e interactúa con este dashboard</a>
       </div>
       <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Dashboard Power BI">
     </div>
@@ -154,7 +154,7 @@
         <h3>Análisis de precios: decisiones antes del pico</h3>
         <p>Seguimiento y visualización de precios de insumos por 5 meses en Excel, para decisiones de compra inteligentes.</p>
         <p><strong>Habilidades:</strong> Excel avanzado, visualización, análisis de tendencias</p>
-        <a href="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717.png?raw=true" class="cta">Ver reporte de análisis de precios</a>
+        <a href="https://github.com/Irvyandl/VirtualAssitance/raw/refs/heads/main/assets/visuals/PricingReport.xlsx" class="cta">Ver reporte de análisis de precios</a>
       </div>
       <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717.png?raw=true" alt="Reporte de precios en Excel">
     </div>
@@ -165,7 +165,7 @@
         <h3>Correo ejecutivo: claridad en movimiento</h3>
         <p>Email redactado desde llamada + info interna. Explica aumentos de precio y mantiene un tono profesional bilingüe.</p>
         <p><strong>Habilidades:</strong> Redacción, comunicación efectiva, inglés profesional</p>
-        <a href="#" class="cta">¿Emails así de claros en tu negocio? Contáctame</a>
+        <a href="https://irvyandl.github.io/VirtualAssitance/contact.html" class="cta">¿Emails así de claros en tu negocio? Contáctame</a>
       </div>
       <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Correo profesional">
     </div>
