--- a/Skills.html
+++ b/Skills.html
@@ -218,8 +218,8 @@
     </div>
 
     <div class="buttons">
-      <a href="proyectos.html">Ver proyectos</a>
-      <a href="contacto.html">Contáctame para aplicar estas habilidades</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/Projects.html">Ver proyectos</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Contáctame para aplicar estas habilidades</a>
     </div>
 
   </section>
