--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div class="device-row">
     <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Dashboard en laptop">
     <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Reporte en tablet">
-    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717.png?raw=true" alt="Correo profesional en móvil">
+    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Correo profesional en móvil">
   </div>
 
   <footer>
