--- a/Projects.html
+++ b/Projects.html
@@ -156,7 +156,7 @@
         <p><strong>Habilidades:</strong> Excel avanzado, visualización, análisis de tendencias</p>
         <a href="https://github.com/Irvyandl/VirtualAssitance/raw/refs/heads/main/assets/visuals/PricingReport.xlsx" class="cta">Ver reporte de análisis de precios</a>
       </div>
-      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717.png?raw=true" alt="Reporte de precios en Excel">
+      <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Reporte de precios en Excel">
     </div>
 
     <!-- Email -->
