--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Irvin Prado | Asistencia Virtual + BI</title>
+  <title>Irvin Prado | Virtual Assistance + BI</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -106,17 +107,18 @@
 <body>
   <header>
     <h1>For E-commerce, Agencies & Bilingual CEOs – Irvin’s Assistance</h1>
-    <h2>Virtual Assistance + BI Reporting = Tiempo y datos en tus manos</h2>
+    <h2>Virtual Assistance + BI Dashboards = Your time and insights optimized</h2>
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssitance/Projects.html" class="primary">Ver visuales</a>
-      <a href="https://irvyandl.github.io/VirtualAssitance/Experience.html" class="secondary">Ver experiencia</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/Projects.html" class="primary">See Visuals</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/Experience.html" class="secondary">See Experience</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/Skills.html" class="secondary">See Skills</a>
     </div>
   </header>
 
   <div class="device-row">
-    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Dashboard en laptop">
-    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Reporte en tablet">
-    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Correo profesional en móvil">
+    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/8787188b740.png?raw=true" alt="Presentation Slide Preview">
+    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/g6KAHyjAF%20(1).png?raw=true" alt="Power BI Dashboard Mockup">
+    <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/c5930e27717%20(1).png?raw=true" alt="Business Email Screenshot">
   </div>
 
   <footer>
