--- a/Experience.html
+++ b/Experience.html
@@ -1,8 +1,9 @@
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Experiencia | Irvin Prado</title>
+  <title>Experience | Irvin Prado</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -135,28 +136,29 @@
   <section class="section">
     <div class="experience-block">
       <div class="text">
-        <h3>The Boulevard Food | Oct 2024 - Presente</h3>
-        <p>Soporte integral para negocio local:</p>
+        <h3>The Boulevard Food | Oct 2024 – Present</h3>
+        <p>Comprehensive support for a local food business:</p>
         <ul>
-          <li>Organización de horarios y proveedores</li>
-          <li>Diseño de presentaciones e informes de costos</li>
-          <li>Redacción de correos y promociones</li>
+          <li>Scheduling and vendor coordination</li>
+          <li>Design of presentations and cost reports</li>
+          <li>Business emails and promotional writing</li>
         </ul>
         <div class="icon-row">
-          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/a9efd4ebac881ea87bcc51236177d05ab6541750/assets/visuals/mail.svg" alt="Calendario">
-          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/calendar.svg" alt="Excel">
-          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/check-square%20(1).svg" alt="Checklist">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/a9efd4ebac881ea87bcc51236177d05ab6541750/assets/visuals/mail.svg" alt="Mail icon">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/calendar.svg" alt="Calendar icon">
+          <img src="https://raw.githubusercontent.com/Irvyandl/VirtualAssitance/ed32b3cabb13e0238ae8b2ab8d0ae64f0760244e/assets/visuals/check-square%20(1).svg" alt="Checklist icon">
         </div>
-        <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Contactame para sumar esta experiencia a tu equipo</a>
+        <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Add this experience to your team</a>
       </div>
       <div class="mockup-row">
-        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Mockup existente">
-        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/joF4belZM.png?raw=true" alt="Checklist visual">
-        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Correo visual">
+        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/aHFRQ2q$Y.png?raw=true" alt="Process flow mockup">
+        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/joF4belZM.png?raw=true" alt="Checklist mockup">
+        <img src="https://github.com/Irvyandl/VirtualAssitance/blob/main/assets/visuals/eiHMprKud.png?raw=true" alt="Email mockup">
       </div>
     </div>
     <div class="buttons">
-      <a href="https://irvyandl.github.io/VirtualAssitance/Skills.html">Ver habilidades</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/contact.html">Contact Me</a>
+      <a href="https://irvyandl.github.io/VirtualAssitance/Skills.html">View Skills</a>
     </div>
   </section>
 
